[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/WEigh/Weigh.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Weigh.gd" type="Script" id=2]
[ext_resource path="res://Sprites/WEigh/weighStick.png" type="Texture" id=3]
[ext_resource path="res://Font/3Dventure.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 73, 42.75 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[node name="Weigh" type="Node2D"]
position = Vector2( 465, 331 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Left" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Left"]
polygon = PoolVector2Array( -291, -68, -290, -21, -146, -20, -146, -68, -134, -68, -133, -9, -302, -10, -302, -68 )

[node name="Left_Area" type="Area2D" parent="Left"]
position = Vector2( -233, -44 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Left_Area"]
position = Vector2( 15, -19 )
shape = SubResource( 1 )

[node name="Goal_left_num" type="Label" parent="Left"]
margin_left = -292.0
margin_top = -112.0
margin_right = -144.0
margin_bottom = -22.0
custom_colors/font_color = Color( 0.513726, 0.529412, 0.576471, 1 )
custom_fonts/font = SubResource( 2 )
text = "x"
align = 1
valign = 1

[node name="Goal_left_num2" type="Label" parent="Left"]
margin_left = -292.0
margin_top = -10.0
margin_right = -147.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.513726, 0.529412, 0.576471, 1 )
custom_fonts/font = SubResource( 3 )
text = "X"
align = 1
valign = 1

[node name="Right" type="StaticBody2D" parent="."]
position = Vector2( 467, -7 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Right"]
position = Vector2( -21, 6 )
polygon = PoolVector2Array( -290, -68, -290, -21, -146, -20, -146, -68, -134, -68, -133, -9, -302, -10, -302, -68 )

[node name="Right_Area" type="Area2D" parent="Right"]
position = Vector2( -241, -17 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Right/Right_Area"]
position = Vector2( 2, -38 )
shape = SubResource( 1 )

[node name="Goal_right_num" type="Label" parent="Right"]
margin_left = -311.0
margin_top = -106.0
margin_right = -166.0
margin_bottom = -16.0
custom_colors/font_color = Color( 0.513726, 0.529412, 0.576471, 1 )
custom_fonts/font = SubResource( 2 )
text = "X"
align = 1
valign = 1

[node name="Goal_right_num2" type="Label" parent="Right"]
margin_left = -312.0
margin_top = -4.0
margin_right = -167.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.513726, 0.529412, 0.576471, 1 )
custom_fonts/font = SubResource( 3 )
text = "X"
align = 1
valign = 1

[node name="WeighStick" type="Sprite" parent="."]
modulate = Color( 0.411765, 0.419608, 0.45098, 1 )
position = Vector2( 2, 2 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Weigh" type="Sprite" parent="."]
modulate = Color( 0.411765, 0.419608, 0.45098, 1 )
position = Vector2( -218, -40 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Weigh2" type="Sprite" parent="."]
modulate = Color( 0.411765, 0.419608, 0.45098, 1 )
position = Vector2( 228, -40 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="Left/Left_Area" to="." method="_on_Left_Area_body_entered"]
[connection signal="body_exited" from="Left/Left_Area" to="." method="_on_Left_Area_body_exited"]
[connection signal="body_entered" from="Right/Right_Area" to="." method="_on_Right_Area_body_entered"]
[connection signal="body_exited" from="Right/Right_Area" to="." method="_on_Right_Area_body_exited"]
